// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform: redux-form@6.8.0 should transform with: "each-core-module.js" 1`] = `
import {
  actions,
  actionTypes,
  defaultShouldAsyncValidate,
  defaultShouldValidate,
  Field,
  FieldArray,
  fieldInputPropTypes,
  fieldMetaPropTypes,
  fieldPropTypes,
  Fields,
  Form,
  formPropTypes,
  FormSection,
  formValues,
  formValueSelector,
  getFormAsyncErrors,
  getFormInitialValues,
  getFormMeta,
  getFormNames,
  getFormSubmitErrors,
  getFormSyncErrors,
  getFormSyncWarnings,
  getFormValues,
  hasSubmitFailed,
  hasSubmitSucceeded,
  isDirty,
  isInvalid,
  isPristine,
  isSubmitting,
  isValid,
  propTypes,
  reducer,
  reduxForm,
  SubmissionError,
  values,
} from "redux-form";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import * as actions from "redux-form/es/actions";
import * as actionTypes from "redux-form/es/actionTypes";
import defaultShouldAsyncValidate from "redux-form/es/defaultShouldAsyncValidate";
import defaultShouldValidate from "redux-form/es/defaultShouldValidate";
import Field from "redux-form/es/Field";
import FieldArray from "redux-form/es/FieldArray";
import { fieldInputPropTypes } from "redux-form/es/propTypes";
import { fieldMetaPropTypes } from "redux-form/es/propTypes";
import { fieldPropTypes } from "redux-form/es/propTypes";
import Fields from "redux-form/es/Fields";
import Form from "redux-form/es/Form";
import { formPropTypes } from "redux-form/es/propTypes";
import FormSection from "redux-form/es/FormSection";
import formValues from "redux-form/es/formValues";
import formValueSelector from "redux-form/es/formValueSelector";
import getFormAsyncErrors from "redux-form/es/getFormAsyncErrors";
import getFormInitialValues from "redux-form/es/getFormInitialValues";
import getFormMeta from "redux-form/es/getFormMeta";
import getFormNames from "redux-form/es/getFormNames";
import getFormSubmitErrors from "redux-form/es/getFormSubmitErrors";
import getFormSyncErrors from "redux-form/es/getFormSyncErrors";
import getFormSyncWarnings from "redux-form/es/getFormSyncWarnings";
import getFormValues from "redux-form/es/getFormValues";
import hasSubmitFailed from "redux-form/es/hasSubmitFailed";
import hasSubmitSucceeded from "redux-form/es/hasSubmitSucceeded";
import isDirty from "redux-form/es/isDirty";
import isInvalid from "redux-form/es/isInvalid";
import isPristine from "redux-form/es/isPristine";
import isSubmitting from "redux-form/es/isSubmitting";
import isValid from "redux-form/es/isValid";
import propTypes from "redux-form/es/propTypes";
import reducer from "redux-form/es/reducer";
import reduxForm from "redux-form/es/reduxForm";
import SubmissionError from "redux-form/es/SubmissionError";
import values from "redux-form/es/values";
`;

exports[`Transform: redux-form@6.8.0 should transform with: "each-immutable-module.js" 1`] = `
import {
  actions,
  actionTypes,
  defaultShouldAsyncValidate,
  defaultShouldValidate,
  Field,
  FieldArray,
  fieldInputPropTypes,
  fieldMetaPropTypes,
  fieldPropTypes,
  Fields,
  Form,
  formPropTypes,
  FormSection,
  formValues,
  formValueSelector,
  getFormAsyncErrors,
  getFormInitialValues,
  getFormMeta,
  getFormNames,
  getFormSubmitErrors,
  getFormSyncErrors,
  getFormSyncWarnings,
  getFormValues,
  hasSubmitFailed,
  hasSubmitSucceeded,
  isDirty,
  isInvalid,
  isPristine,
  isSubmitting,
  isValid,
  propTypes,
  reducer,
  reduxForm,
  SubmissionError,
  values,
} from "redux-form/immutable";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import * as actions from "redux-form/es/actions";
import * as actionTypes from "redux-form/es/actionTypes";
import defaultShouldAsyncValidate from "redux-form/es/defaultShouldAsyncValidate";
import defaultShouldValidate from "redux-form/es/defaultShouldValidate";
import Field from "redux-form/es/immutable/Field";
import FieldArray from "redux-form/es/immutable/FieldArray";
import { fieldInputPropTypes } from "redux-form/es/propTypes";
import { fieldMetaPropTypes } from "redux-form/es/propTypes";
import { fieldPropTypes } from "redux-form/es/propTypes";
import Fields from "redux-form/es/immutable/Fields";
import Form from "redux-form/es/Form";
import { formPropTypes } from "redux-form/es/propTypes";
import FormSection from "redux-form/es/FormSection";
import formValues from "redux-form/es/immutable/formValues";
import formValueSelector from "redux-form/es/immutable/formValueSelector";
import getFormAsyncErrors from "redux-form/es/immutable/getFormAsyncErrors";
import getFormInitialValues from "redux-form/es/immutable/getFormInitialValues";
import getFormMeta from "redux-form/es/immutable/getFormMeta";
import getFormNames from "redux-form/es/immutable/getFormNames";
import getFormSubmitErrors from "redux-form/es/immutable/getFormSubmitErrors";
import getFormSyncErrors from "redux-form/es/immutable/getFormSyncErrors";
import getFormSyncWarnings from "redux-form/es/immutable/getFormSyncWarnings";
import getFormValues from "redux-form/es/immutable/getFormValues";
import hasSubmitFailed from "redux-form/es/immutable/hasSubmitFailed";
import hasSubmitSucceeded from "redux-form/es/immutable/hasSubmitSucceeded";
import isDirty from "redux-form/es/immutable/isDirty";
import isInvalid from "redux-form/es/immutable/isInvalid";
import isPristine from "redux-form/es/immutable/isPristine";
import isSubmitting from "redux-form/es/immutable/isSubmitting";
import isValid from "redux-form/es/immutable/isValid";
import propTypes from "redux-form/es/propTypes";
import reducer from "redux-form/es/immutable/reducer";
import reduxForm from "redux-form/es/immutable/reduxForm";
import SubmissionError from "redux-form/es/SubmissionError";
import values from "redux-form/es/immutable/values";
`;
